--- a/website/html/index.html
+++ b/website/html/index.html
@@ -30,12 +30,12 @@
 		<li><a href="https://github.com/reworkcss/rework-npm">rework-npm</a> &mdash; inline <code>@import</code> that supports npm packages</li>
 		<li><a href="https://github.com/reworkcss/rework-plugin-mixin">rework-plugin-mixin</a> &mdash; mixins in JavaScript, heavily used by nextcss</li>
 		<li><a href="https://github.com/andreypopp/rework-macro">rework-macro</a> &mdash; macros, like mixins, but in CSS</li>
-		<li><a href="https://github.com/reworkcss/rework-inherit">rework-inherit</a> &mdash; selector inheritance, called <code>extend</code> in some other preprocessors</li>
+		<li><a href="https://github.com/reworkcss/rework-inherit">rework-inherit</a> &mdash; selector inheritance, called <code>extend</code> in some other preprocessors (<strong>very important to understand how it works</strong>)</li>
 		<li><a href="https://github.com/reworkcss/rework-plugin-references">rework-plugin-references</a> &mdash; property references <code>{ height: @width }</code></li>
 		<li><a href="https://github.com/reworkcss/rework-plugin-ease">rework-plugin-ease</a> &mdash; more <a href="http://easings.net">easing functions</a></li>
 		<li><a href="https://github.com/fgnass/rework-palette">rework-palette</a> &mdash; <a href="http://clrs.cc">clrs.cc</a> colors instead of the ugly default ones</li>
 		<li><a href="https://github.com/Isquariel/rework-clone">rework-clone</a> &mdash; cloning rules <small class="ob"> because I &hearts; <a href="https://en.wikipedia.org/wiki/Orphan_Black">clones</a></small></li>
-		<li><a href="https://github.com/fgnass/rework-parent">rework-parent</a> &mdash; <code>&</code> selector that refers to the previous selector</li>
+		<li><a href="https://github.com/fgnass/rework-parent">rework-parent</a> &mdash; <code>&</code> selector that refers to the previous selector (<strong>used in the examples a lot</strong>)</li>
 		<li>
 			<a href="http://myth.io">Myth</a>:
 			<ul>
@@ -812,7 +812,7 @@ for (var i = 0; i &lt; trs.length; i++) {
 
 <footer>
 	nextcss is made by <a href="https://github.com/myfreeweb">@myfreeweb</a>, licensed under <a href="https://www.tldrlegal.com/l/apache2">the apache license</a>.
-	thanks a lot &hearts; the authors of <a href="http://getbootstrap.com">bootstrap</a>, <a href="https://github.com/thoughtbot/bourbon">bourbon</a>, <a href="http://clrs.cc">clrs.cc</a>, <a href="http://alexwolfe.github.io/Buttons/">Buttons</a>, <a href="http://purecss.io">Pure</a>, <a href="http://necolas.github.io/normalize.css/">normalize.css</a>, <a href="http://typeplate.com">typeplate</a> and all the other things
+	thanks a lot &hearts; the authors of <a href="http://getbootstrap.com">bootstrap</a>, <a href="https://github.com/thoughtbot/bourbon">bourbon</a>, <a href="http://clrs.cc">clrs.cc</a>, <a href="http://alexwolfe.github.io/Buttons/">buttons</a>, <a href="http://purecss.io">pure</a>, <a href="http://necolas.github.io/normalize.css/">normalize.css</a>, <a href="http://typeplate.com">typeplate</a> and all the other things
 </footer>
 
 <script src="prism.js"></script>
