--- a/website/html/index.html
+++ b/website/html/index.html
@@ -178,10 +178,10 @@
 		margin: 1em 0;
 	}
 	/* Gutters */
-	.grid-example > * { padding: 0 0.6em; }
+	& > * { padding: 0 0.6em; }
 	/* Spans (be more creative with the class name pls) */
-	.grid-example > .demo-two-of-three { flex: 0 0 66.66666%; }
-	.grid-example > .demo-two-of-four { flex: 0 0 50%; }
+	& > .demo-two-of-three { flex: 0 0 66.66666%; }
+	& > .demo-two-of-four { flex: 0 0 50%; }
 }</code></pre></div>
 		<div><pre><code class="language-markup">&lt;div class="grid-example"&gt;
 	&lt;div class="demo-two-of-four"&gt;
