more fontawesome in the website

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -12,7 +12,10 @@
 		nextcss
 		<small>a CSS framework from the future</small>
 	</h1>
-	<a href="https://github.com/myfreeweb/nextcss" class="button-pure">Star on GitHub!</a>
+	<a href="https://github.com/myfreeweb/nextcss" class="button-pure">
+		<i class="fa fa-github-alt"></i>
+		Star on GitHub!
+	</a>
 </header>
 
 <section>
@@ -391,9 +394,18 @@
 	button-style: bgcolor(green shade(20%)) fgcolor(white) gradient bordered;
 }</code></pre>
 	<p>
-		<a href="javascript:void(0)" class="button-success">a.button-success</a>
-		<a href="javascript:void(0)" class="button-success" disabled>a.button-success[disabled]</a>
-		<button class="button-success">button.button-success</button>
+		<a href="javascript:void(0)" class="button-success">
+			<i class="fa fa-check"></i>
+			a.button-success
+		</a>
+		<a href="javascript:void(0)" class="button-success" disabled>
+			<i class="fa fa-check"></i>
+			a.button-success[disabled]
+		</a>
+		<button class="button-success">
+			<i class="fa fa-check"></i>
+			button.button-success
+		</button>
 	</p>
 
 	<pre><code class="language-css">.button-borderonly {
@@ -472,7 +484,7 @@
 }</code></pre></div>
 		<div><pre><code class="language-markup">&lt;form class="form-search"&gt;
 	&lt;label&gt;
-		&lt;span&gt;Search the web&lt;/span&gt;
+		&lt;span&gt;&lt;i class="fa fa-search"&gt;&lt;/i&gt;&lt;/span&gt;
 		&lt;input type="search"&gt;
 		&lt;button class="button-pure"&gt;Go!&lt;/button&gt;
 	&lt;/label&gt;
@@ -486,7 +498,7 @@
 	</div>
 	<form class="form-search">
 		<label>
-			<span>Search the web</span>
+			<span><i class="fa fa-search"></i></span>
 			<input type="search">
 			<button class="button-pure">Go!</button>
 		</label>
@@ -853,8 +865,8 @@ for (var i = 0; i &lt; trs.length; i++) {
 </section>
 
 <footer>
-	nextcss is made by <a href="https://github.com/myfreeweb">@myfreeweb</a>, licensed under <a href="https://www.tldrlegal.com/l/apache2">the apache license</a>.
-	thanks a lot &hearts; the authors of <a href="http://getbootstrap.com">bootstrap</a>, <a href="https://github.com/thoughtbot/bourbon">bourbon</a>, <a href="http://clrs.cc">clrs.cc</a>, <a href="http://alexwolfe.github.io/Buttons/">buttons</a>, <a href="http://purecss.io">pure</a>, <a href="http://necolas.github.io/normalize.css/">normalize.css</a>, <a href="http://typeplate.com">typeplate</a> and all the other things
+	nextcss is made by <a href="https://github.com/myfreeweb">@myfreeweb</a>, licensed under <a href="https://www.tldrlegal.com/l/apache2"><i class="fa fa-legal"></i> the apache license</a>.
+	thanks a lot <i class="fa fa-thumbs-up"></i> the authors of <a href="http://getbootstrap.com">bootstrap</a>, <a href="https://github.com/thoughtbot/bourbon">bourbon</a>, <a href="http://clrs.cc">clrs.cc</a>, <a href="http://alexwolfe.github.io/Buttons/">buttons</a>, <a href="http://purecss.io">pure</a>, <a href="http://necolas.github.io/normalize.css/">normalize.css</a>, <a href="http://typeplate.com">typeplate</a>, <a href="http://fontawesome.io">font awesome</a> and all the other things
 </footer>
 
 <script src="prism.js"></script>
