--- a/website/html/index.html
+++ b/website/html/index.html
@@ -10,7 +10,7 @@
 <header>
 	<h1>
 		nextcss
-		<small>a CSS framework from the future</small>
+		<small>a CSS framework from the future <i class="fa fa-magic"></i></small>
 	</h1>
 	<a href="https://github.com/myfreeweb/nextcss" class="button-pure">
 		<i class="fa fa-github-alt"></i>
@@ -19,7 +19,7 @@
 </header>
 
 <section>
-	<h2>Introduction</h2>
+	<h2><i class="fa fa-fw fa-book"></i> Introduction</h2>
 	<p>
 		nextcss is a <abbr title="Cascading Style Sheets">CSS</abbr> framework from the future.
 		Your markup stays clean and semantic and it takes care of awesome responsive design.
@@ -63,7 +63,7 @@
 </section>
 
 <section>
-	<h2>Installation</h2>
+	<h2><i class="fa fa-fw fa-download"></i> Installation</h2>
 	<p>
 		nextcss is <a href="https://www.npmjs.org/package/nextcss">available on npm</a>.
 	</p>
@@ -81,7 +81,7 @@
 		There is a way to only import placeholders, without any top level rules (for <em>special cases</em> like components or something):
 	</p>
 	<pre><code class="language-css">@import "nextcss/all";</code></pre>
-	<h3>Building</h3>
+	<h3><i class="fa fa-fw fa-wrench"></i> Building</h3>
 	<p>
 		<a href="https://github.com/broccolijs/broccoli">Broccoli</a> is the recommended build tool.
 		Here's an example part of a build file of a nextcss project, using <a href="https://github.com/myfreeweb/sweetbuild">sweetbuild</a> macros for <a href="http://sweetjs.org">Sweet.js</a>:
@@ -115,7 +115,7 @@
 </section>
 
 <section>
-	<h2>Usage</h2>
+	<h2><i class="fa fa-fw fa-code"></i> Usage</h2>
 	<h3>Base</h3>
 	<p>
 		nextcss automatically includes <a href="http://necolas.github.io/normalize.css/">normalize.css</a> v3.
