separate table-striped, better colors

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -734,7 +734,10 @@
 		The example uses a script.
 	</p>
 	<div class="grid-codez">
-		<div><pre><code class="language-css">@media screen and (max-width: 40em) {
+		<div><pre><code class="language-css">.table-frameworks {
+	inherit: %table-striped;
+}
+@media screen and (max-width: 40em) {
 	.table-frameworks {
 		inherit: %table-collapsed;
 	}
