--- a/website/html/index.html
+++ b/website/html/index.html
@@ -223,7 +223,7 @@
 		<div class="demo-two-of-three"><div class="grid-demo-content">2/3</div></div>
 		<div><div class="grid-demo-content">1/3</div></div>
 	</div>
-	<div class="grid-example">
+	<div class="grid-example grid-example-last">
 		<div class="demo-two-of-four">
 			<div class="grid-demo-content">2/4</div>
 			<div class="grid-example">
