--- a/website/html/index.html
+++ b/website/html/index.html
@@ -180,40 +180,104 @@
 	<p>
 		This module is based on <a href="http://philipwalton.github.io/solved-by-flexbox/demos/grids/">Solved by Flexbox</a>.
 	</p>
+
+	<h4>Basic grid usage</h4>
 	<p>
-		If you want to force overflowing columns into the correct size, either use <code>overflow: auto</code> or something like <code>span: 1 of 4</code>.
+		In the simple case, inherit from <code>%grid-flex-N</code> where N is the number of columns, from 2 to 8.
+		Don't forget you can inherit from different placeholders in different media queries.
 	</p>
+	<p>
+		In such grids, the last line is automatically stretched to fill 100%.
+		This is appropriate for showing content in a grid.
+	</p>
+
+	<div class="grid-codez">
+		<div><pre><code class="language-css">.grid-thirds-example { inherit: %grid; }
+@media screen and (min-width: 38em) {
+	.grid-thirds-example { inherit: %grid-flex-3; }
+	& > * { gutter: 0.6em; }
+}</code></pre></div>
+		<div><pre><code class="language-markup">&lt;div class="grid-thirds-example"&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;auto-stretched to 1/2&lt;/div&gt;&lt;/div&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;auto-stretched to 1/2&lt;/div&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
+	</div>
+
+	<div class="grid-thirds-example">
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div><div class="grid-demo-content">auto-stretched to 1/2</div></div>
+		<div><div class="grid-demo-content">auto-stretched to 1/2</div></div>
+	</div>
+
+	<div class="grid-fifths-example">
+		<div><div class="grid-demo-content">1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5</div></div>
+		<div><div class="grid-demo-content">1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5</div></div>
+		<div><div class="grid-demo-content">1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5</div></div>
+		<div><div class="grid-demo-content">1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5</div></div>
+		<div><div class="grid-demo-content">1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5 1/5</div></div>
+		<div><div class="grid-demo-content">auto-stretched to 1/3</div></div>
+		<div><div class="grid-demo-content">auto-stretched to 1/3</div></div>
+		<div><div class="grid-demo-content">auto-stretched to 1/3</div></div>
+	</div>
+
+	<h4>Spans and offsets</h4>
+	<p>
+		When you want to use a grid for layout, you might want to use <code>%grid-flex</code> (without a number).
+		These grids only allow one line of elements, but you can use multiple grids.
+		In these grids, you can use the <code>span</code> rule, as shown in the examples below.
+	</p>
+
+	<div class="grid-codez">
+		<div><pre><code class="language-css">.grid-spannable-example { inherit: %grid; }
+@media screen and (min-width: 38em) {
+	.grid-spannable-example { inherit: %grid-flex; }
+	& > * { gutter: 0.6em; span: 1 of 3; }
+	.demo-span-thirds { span: 2 of 3; }
+	.demo-offset-thirds { span: 1 of 3 offset 1; }
+}</code></pre></div>
+		<div><pre><code class="language-markup">&lt;div class="grid-spannable-example"&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div class="demo-span-thirds"&gt;&lt;div class="grid-demo-content"&gt;2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3&lt;/div&gt;&lt;/div&gt;
+&lt;/div&gt;
+&lt;div class="grid-spannable-example"&gt;
+	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+	&lt;div class="demo-offset-thirds"&gt;&lt;div class="grid-demo-content"&gt;1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3&lt;/div&gt;&lt;/div&gt;
+&lt;/div&gt;</code></pre></div>
+	</div>
+
+	<div class="grid-spannable-example">
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div class="demo-span-thirds"><div class="grid-demo-content">2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3 2/3</div></div>
+	</div>
+
+	<div class="grid-spannable-example">
+		<div><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+		<div class="demo-offset-thirds"><div class="grid-demo-content">1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3 1/3</div></div>
+	</div>
+
 	<div class="grid-codez">
 		<div><pre><code class="language-css">.grid-example {
 	inherit: %grid;
 }
-/* You're in control of the breakpoint!
-   Tip: use @custom-media to avoid repeating yourself. */
 @media screen and (min-width: 38em) {
 	.grid-example {
 		inherit: %grid-flex;
-		margin: 0.825em 0;
 	}
-	/* Gutters */
 	& > * { gutter: 0.6em; }
-	/* Spans (be more creative with the class name pls) */
-	& > .demo-two-of-three { span: 2 of 3; }
 	& > .demo-two-of-four  { span: 2 of 4; }
-	& > .demo-fourth-offset-two { span: 1 of 4 offset 2; }
 }</code></pre></div>
 		<div><pre><code class="language-markup">&lt;div class="grid-example"&gt;
-	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/2&lt;/div&gt;&lt;/div&gt;
-	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/2&lt;/div&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class="grid-example"&gt;
-	&lt;div class="demo-two-of-three"&gt;&lt;div class="grid-demo-content"&gt;2/3&lt;/div&gt;&lt;/div&gt;
-	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/3&lt;/div&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class="grid-example"&gt;
-	&lt;div&gt;&lt;div class="grid-demo-content"&gt;1/4&lt;/div&gt;&lt;/div&gt;
-	&lt;div class="demo-fourth-offset-two"&gt;&lt;div class="grid-demo-content"&gt;1/4&lt;/div&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class="grid-example grid-example-last"&gt;
 	&lt;div class="demo-two-of-four"&gt;
 		&lt;div class="grid-demo-content"&gt;2/4&lt;/div&gt;
 		&lt;div class="grid-example"&gt;
@@ -232,18 +296,6 @@
 &lt;/div&gt;</code></pre></div>
 	</div>
 	<div class="grid-example">
-		<div><div class="grid-demo-content">1/2</div></div>
-		<div><div class="grid-demo-content">1/2</div></div>
-	</div>
-	<div class="grid-example">
-		<div class="demo-two-of-three"><div class="grid-demo-content">2/3</div></div>
-		<div><div class="grid-demo-content">1/3</div></div>
-	</div>
-	<div class="grid-example">
-		<div><div class="grid-demo-content">1/4</div></div>
-		<div class="demo-fourth-offset-two"><div class="grid-demo-content">1/4</div></div>
-	</div>
-	<div class="grid-example grid-example-last">
 		<div class="demo-two-of-four">
 			<div class="grid-demo-content">2/4</div>
 			<div class="grid-example">
@@ -260,6 +312,7 @@
 			<div class="grid-demo-content"><br><br>1/4<br><br><br></div>
 		</div>
 	</div>
+
 </section>
 
 <section>
